update 2 picture size

--- a/index.html
+++ b/index.html
@@ -11,34 +11,38 @@
     <header>
         &lt;header&gt; #FFA500
     </header>
-    <section id="full">
-        <section id="left">
-            &lt;section&gt; #30948D
-            <p>About<a href="index.html">About</a> ?</p>
+    <section id="navbar_row">
+        <section id="index">
+
+            <p>About<a href="index.html">About</a></p>
         </section>
 
-        <section id="middle">
-            &lt;section&gt; #9E1212
-            <p>Portfolio<a href="portfolio.html">Portfolio</a> ?</p>
+        <section id="portfolio">
+
+            <p>Portfolio<a href="portfolio.html">Portfolio</a></p>
         </section>
 
-        <section id="right">
-            &lt;section&gt; #30948D
-            <p>Contact<a href="contact.html">Contact</a> ?</p>
+        <section id="contact">
+
+            <p>Contact<a href="contact.html">Contact</a></p>
 
         </section>
     </section>
-    <div>
 
-        <section>
+    <div class="container">
+
+        <section id="About-me-Page">
 
             <h2>About Me</h2>
 
-            <img src="assets/images/profile_picture.jpeg" alt="Lawrence Cocard">
+            <img src="assets/images/profile_picture.jpeg" width=320px heigth=200px alt="Lawrence Cocard">
 
-            <p>Write a short paragraph or two about yourself, or use placeholder text from <a
-                    href="http://www.lipsum.com/">www.lipsum.com</a></p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque pellentesque sem eget purus efficitur, eu porttitor sapien consequat. Mauris eget dolor nunc.</p>
+            <p>Nullam maximus dolor tortor, in fermentum dolor fringilla in. Maecenas volutpat mi vel ligula sollicitudin, sit amet interdum mi ornare. </p>
+            <p>Donec efficitur consectetur erat. Quisque felis ante, congue et dui eu, fermentum imperdiet lorem. Donec at massa neque. </p>
+
         </section>
+
     </div>
 
 
