--- a/index.html
+++ b/index.html
@@ -1,49 +1,80 @@
+<!-- Basic-Portfolio - index.html -->
+
 <!DOCTYPE html>
 <html lang="en-us">
 
 <head>
     <meta charset="UTF-8">
     <title>About Me</title>
-    <link rel="stylesheet" type="text/css" href="assets/css/style/floats.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
 
 <body>
+
     <header>
-        &lt;header&gt; #FFA500
+        <div class=topcontainer>
+            <section id="left">
+                <h1>Lawrence Cocard</h1>
+            </section>
+
+            <section id="middle">
+            </section>
+
+            <section id="right">
+                <div id="navbar_row">
+                    <div id="about">
+                        <p><a href="index.html">About</a></p>
+                    </div>
+
+                    <div id="portfolio">
+                        <p><a href="portfolio.html">Portfolio</a></p>
+                    </div>
+
+                    <div id="contact">
+                        <p><a href="contact.html">Contact</a></p>
+                    </div>
+                </div>
+            </section>
+        </div>
     </header>
-    <section id="navbar_row">
-        <section id="index">
-
-            <p>About<a href="index.html">About</a></p>
-        </section>
-
-        <section id="portfolio">
-
-            <p>Portfolio<a href="portfolio.html">Portfolio</a></p>
-        </section>
-
-        <section id="contact">
-
-            <p>Contact<a href="contact.html">Contact</a></p>
-
-        </section>
-    </section>
 
     <div class="container">
 
+        <h2>About Me</h2>
+
+        <img id=profile-picture src="assets/images/profile_picture.jpeg" alt="Lawrence Cocard">
+
         <section id="About-me-Page">
 
-            <h2>About Me</h2>
-
-            <img src="assets/images/profile_picture.jpeg" width=320px heigth=200px alt="Lawrence Cocard">
-
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque pellentesque sem eget purus efficitur, eu porttitor sapien consequat. Mauris eget dolor nunc.</p>
-            <p>Nullam maximus dolor tortor, in fermentum dolor fringilla in. Maecenas volutpat mi vel ligula sollicitudin, sit amet interdum mi ornare. </p>
-            <p>Donec efficitur consectetur erat. Quisque felis ante, congue et dui eu, fermentum imperdiet lorem. Donec at massa neque. </p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+                dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
+                ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
+                fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
+                deserunt mollit anim id est laborum.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+                dolore magna aliqua. Rhoncus urna neque viverra justo nec ultrices dui sapien. Et magnis dis parturient
+                montes nascetur ridiculus mus mauris. Sit amet consectetur adipiscing elit duis tristique sollicitudin
+                nibh sit. Ut sem nulla pharetra diam sit amet nisl suscipit. Pulvinar etiam non quam lacus suspendisse
+                faucibus interdum. Enim tortor at auctor urna. Pulvinar mattis nunc sed blandit libero. Magna fringilla
+                urna porttitor rhoncus dolor purus. Id ornare arcu odio ut sem nulla pharetra. Pharetra diam sit amet
+                nisl. Nulla facilisi etiam dignissim diam. Nulla pellentesque dignissim enim sit amet venenatis. Et odio
+                pellentesque diam volutpat commodo sed egestas. Suspendisse interdum consectetur libero id faucibus
+                nisl. Nunc aliquet bibendum enim facilisis gravida neque. Lacus viverra vitae congue eu consequat ac
+                felis donec.</p>
+            <p>Nam at lectus urna duis convallis convallis tellus id. Mauris in aliquam sem fringilla. Vitae tempus quam
+                pellentesque nec nam. Sit amet consectetur adipiscing elit duis tristique sollicitudin nibh. Pharetra
+                magna ac placerat vestibulum lectus. Nulla malesuada pellentesque elit eget gravida cum sociis natoque.
+                Volutpat est velit egestas dui. Natoque penatibus et magnis dis parturient. Faucibus nisl tincidunt eget
+                nullam non nisi est sit amet. Ut enim blandit volutpat maecenas volutpat blandit.
+            </p>
 
         </section>
 
     </div>
+
+    <footer>
+            <p>© 2019 Copyright</p>
+    </footer>
 
 
 </body>
