--- a/portfolio.html
+++ b/portfolio.html
@@ -1,7 +1,7 @@
 <!-- Basic-Portfolio - portfolio.html -->
 
 <!DOCTYPE html>
-<html lang="en-us">
+<html lang="zxx">
 
 <head>
     <meta charset="UTF-8">
@@ -18,6 +18,7 @@
             </section>
 
             <section id="middle">
+                    <h2>Middle Section (hidden)</h2>
             </section>
 
             <section id="right">
