--- a/index.html
+++ b/index.html
@@ -13,15 +13,15 @@
 
     <header>
         <div class=topcontainer>
-            <section id="left">
+            <div id="left">
                 <h1>Lawrence Cocard</h1>
-            </section>
+            </div>
 
-            <section id="middle">
+            <div id="middle">
                 <h2>Middle Section (hidden)</h2>
-            </section>
+            </div>
 
-            <section id="right">
+            <div id="right">
                 <div id="navbar_row">
                     <div id="about">
                         <p><a href="index.html">About</a></p>
@@ -35,7 +35,7 @@
                         <p><a href="contact.html">Contact</a></p>
                     </div>
                 </div>
-            </section>
+            </div>
         </div>
     </header>
 
