Changed sections with divs for styling

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
         <img id=profile-picture src="assets/images/profile_picture.jpeg" alt="Lawrence Cocard">
 
-        <section id="About-me-Page">
+        <div id="About-me-Page">
 
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
                 dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
@@ -69,7 +69,7 @@
                 nullam non nisi est sit amet. Ut enim blandit volutpat maecenas volutpat blandit.
             </p>
 
-        </section>
+        </div>
 
     </div>
 
