--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             </div>
 
             <div id="middle">
-                <h2>Middle Section (hidden)</h2>
+ <!--               <h2>Middle Section (hidden)</h2> -->
             </div>
 
             <div id="right">
@@ -42,6 +42,8 @@
     </header>
 
     <div id="container">
+
+        <section id=About-Me>
 
         <h2>About Me</h2>
 
@@ -72,6 +74,8 @@
             </p>
 
         </div>
+
+    </section>
 
     </div>
 
