--- a/portfolio.html
+++ b/portfolio.html
@@ -12,13 +12,15 @@
 <body>
 
     <header>
+
+    <!-- -->
         <div class=topcontainer>
             <div id="left">
                 <h1>Lawrence Cocard</h1>
             </div>
 
             <div id="middle">
-                <h2>Middle Section (hidden)</h2>
+<!--               <h2>Middle Section (hidden)</h2> -->
             </div>
 
             <div id="right">
@@ -41,7 +43,8 @@
 
     <div id="container">
 
-        <section id="Portfolio-Page">
+      <section id="Portfolio-Page">
+        
 
             <h2>Portfolio</h2>
 
@@ -79,6 +82,7 @@
                     <h4>Rock Paper Scissors</h4>
                 </a>
             </div>
+        
 
         </section>
     </div>
