--- a/contact.html
+++ b/contact.html
@@ -7,6 +7,7 @@
     <meta charset="UTF-8">
     <title>About Me</title>
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+    <link rel="icon" type="image/png" href="assets/images/IMG_8896copy.png">
 </head>
 
 <body>
