--- a/index.html
+++ b/index.html
@@ -7,19 +7,20 @@
     <meta charset="UTF-8">
     <title>About Me</title>
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+    <link rel="icon" type="image/png" href="assets/images/IMG_8896copy.png">
 </head>
 
 <body>
 
     <header>
         <div class=topcontainer>
-           
+
             <div id="left">
                 <h1>Lawrence Cocard</h1>
             </div>
 
             <div id="middle">
- <!--               <h2>Middle Section (hidden)</h2> -->
+                <!--               <h2>Middle Section (hidden)</h2> -->
             </div>
 
             <div id="right">
@@ -37,7 +38,7 @@
                     </div>
                 </div>
             </div>
-            
+
         </div>
     </header>
 
@@ -45,39 +46,53 @@
 
         <section id=About-Me>
 
-        <h2>About Me</h2>
+            <h2>About Me</h2>
 
-        <img id=profile-picture src="assets/images/profile_picture.jpeg" alt="Lawrence Cocard">
+            <img id=profile-picture src="assets/images/profile_picture.jpeg" alt="Lawrence Cocard">
 
-        <div id="About-me-Page">
+            <div id="About-me-Page">
 
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-                dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
-                ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
-                fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
-                deserunt mollit anim id est laborum.</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-                dolore magna aliqua. Rhoncus urna neque viverra justo nec ultrices dui sapien. Et magnis dis parturient
-                montes nascetur ridiculus mus mauris. Sit amet consectetur adipiscing elit duis tristique sollicitudin
-                nibh sit. Ut sem nulla pharetra diam sit amet nisl suscipit. Pulvinar etiam non quam lacus suspendisse
-                faucibus interdum. Enim tortor at auctor urna. Pulvinar mattis nunc sed blandit libero. Magna fringilla
-                urna porttitor rhoncus dolor purus. Id ornare arcu odio ut sem nulla pharetra. Pharetra diam sit amet
-                nisl. Nulla facilisi etiam dignissim diam. Nulla pellentesque dignissim enim sit amet venenatis. Et odio
-                pellentesque diam volutpat commodo sed egestas. Suspendisse interdum consectetur libero id faucibus
-                nisl. Nunc aliquet bibendum enim facilisis gravida neque. Lacus viverra vitae congue eu consequat ac
-                felis donec.</p>
-            <p>Nam at lectus urna duis convallis convallis tellus id. Mauris in aliquam sem fringilla. Vitae tempus quam
-                pellentesque nec nam. Sit amet consectetur adipiscing elit duis tristique sollicitudin nibh. Pharetra
-                magna ac placerat vestibulum lectus. Nulla malesuada pellentesque elit eget gravida cum sociis natoque.
-                Volutpat est velit egestas dui. Natoque penatibus et magnis dis parturient. Faucibus nisl tincidunt eget
-                nullam non nisi est sit amet. Ut enim blandit volutpat maecenas volutpat blandit.
-            </p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+                    et
+                    dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+                    aliquip
+                    ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum
+                    dolore eu
+                    fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
+                    deserunt mollit anim id est laborum.</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+                    et
+                    dolore magna aliqua. Rhoncus urna neque viverra justo nec ultrices dui sapien. Et magnis dis
+                    parturient
+                    montes nascetur ridiculus mus mauris. Sit amet consectetur adipiscing elit duis tristique
+                    sollicitudin
+                    nibh sit. Ut sem nulla pharetra diam sit amet nisl suscipit. Pulvinar etiam non quam lacus
+                    suspendisse
+                    faucibus interdum. Enim tortor at auctor urna. Pulvinar mattis nunc sed blandit libero. Magna
+                    fringilla
+                    urna porttitor rhoncus dolor purus. Id ornare arcu odio ut sem nulla pharetra. Pharetra diam sit
+                    amet
+                    nisl. Nulla facilisi etiam dignissim diam. Nulla pellentesque dignissim enim sit amet venenatis. Et
+                    odio
+                    pellentesque diam volutpat commodo sed egestas. Suspendisse interdum consectetur libero id faucibus
+                    nisl. Nunc aliquet bibendum enim facilisis gravida neque. Lacus viverra vitae congue eu consequat ac
+                    felis donec.</p>
+                <p>Nam at lectus urna duis convallis convallis tellus id. Mauris in aliquam sem fringilla. Vitae tempus
+                    quam
+                    pellentesque nec nam. Sit amet consectetur adipiscing elit duis tristique sollicitudin nibh.
+                    Pharetra
+                    magna ac placerat vestibulum lectus. Nulla malesuada pellentesque elit eget gravida cum sociis
+                    natoque.
+                    Volutpat est velit egestas dui. Natoque penatibus et magnis dis parturient. Faucibus nisl tincidunt
+                    eget
+                    nullam non nisi est sit amet. Ut enim blandit volutpat maecenas volutpat blandit.
+                </p>
 
-        </div>
+            </div>
 
-    </section>
+        </section>
 
-    <footer>
+        <footer>
             <p>© 2019 Copyright</p>
         </footer>
 
