--- a/portfolio.html
+++ b/portfolio.html
@@ -6,6 +6,7 @@
 <head>
     <meta charset="UTF-8">
     <title>About Me</title>
+    <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
     <link rel="icon" type="image/png" href="assets/images/IMG_8896copy.png">
 </head>
