added reset.css and added font style

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 </head>
 
 <body>
-
     <header>
+
         <div class=topcontainer>
 
             <div id="left">
@@ -21,7 +21,7 @@
             </div>
 
             <div id="middle">
-                <!--               <h2>Middle Section (hidden)</h2> -->
+                <!--               <h2>Middle Section</h2> -->
             </div>
 
             <div id="right">
@@ -53,7 +53,13 @@
 
             <div id="About-me-Page">
 
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+                <p> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Molestiae ullam maxime consectetur
+                    fuga.
+                    Tempore veniam magnam officia voluptas earum sequi rem voluptate quisquam labore cumque, odit
+                    distinctio nesciunt amet hic?</p>
+
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                    labore
                     et
                     dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
                     aliquip
@@ -61,7 +67,8 @@
                     dolore eu
                     fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
                     deserunt mollit anim id est laborum.</p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                    labore
                     et
                     dolore magna aliqua. Rhoncus urna neque viverra justo nec ultrices dui sapien. Et magnis dis
                     parturient
@@ -73,33 +80,35 @@
                     fringilla
                     urna porttitor rhoncus dolor purus. Id ornare arcu odio ut sem nulla pharetra. Pharetra diam sit
                     amet
-                    nisl. Nulla facilisi etiam dignissim diam. Nulla pellentesque dignissim enim sit amet venenatis. Et
+                    nisl. Nulla facilisi etiam dignissim diam. Nulla pellentesque dignissim enim sit amet venenatis.
+                    Et
                     odio
-                    pellentesque diam volutpat commodo sed egestas. Suspendisse interdum consectetur libero id faucibus
-                    nisl. Nunc aliquet bibendum enim facilisis gravida neque. Lacus viverra vitae congue eu consequat ac
+                    pellentesque diam volutpat commodo sed egestas. Suspendisse interdum consectetur libero id
+                    faucibus
+                    nisl. Nunc aliquet bibendum enim facilisis gravida neque. Lacus viverra vitae congue eu
+                    consequat ac
                     felis donec.</p>
-                <p>Nam at lectus urna duis convallis convallis tellus id. Mauris in aliquam sem fringilla. Vitae tempus
+                <p>Nam at lectus urna duis convallis convallis tellus id. Mauris in aliquam sem fringilla. Vitae
+                    tempus
                     quam
                     pellentesque nec nam. Sit amet consectetur adipiscing elit duis tristique sollicitudin nibh.
                     Pharetra
                     magna ac placerat vestibulum lectus. Nulla malesuada pellentesque elit eget gravida cum sociis
                     natoque.
-                    Volutpat est velit egestas dui. Natoque penatibus et magnis dis parturient. Faucibus nisl tincidunt
+                    Volutpat est velit egestas dui. Natoque penatibus et magnis dis parturient. Faucibus nisl
+                    tincidunt
                     eget
                     nullam non nisi est sit amet. Ut enim blandit volutpat maecenas volutpat blandit.
                 </p>
-
             </div>
 
         </section>
 
-        <footer>
-            <p>© 2019 Copyright</p>
-        </footer>
-
     </div>
 
-
+    <footer>
+        <p>© 2019 Copyright</p>
+    </footer>
 </body>
 
 </html>
