updated the style for links and footer text color

--- a/index.html
+++ b/index.html
@@ -107,8 +107,10 @@
     </div>
 
     <footer>
-        <p>© 2019 Copyright</p>
+        <h5>© 2019 Copyright</h5>
     </footer>
+
 </body>
+
 
 </html>
