updated the header and fixed the z-indexes

--- a/portfolio.html
+++ b/portfolio.html
@@ -15,14 +15,13 @@
 
     <header>
 
-    <!-- -->
         <div class=topcontainer>
             <div id="left">
                 <h1>Lawrence Cocard</h1>
             </div>
 
             <div id="middle">
-<!--               <h2>Middle Section (hidden)</h2> -->
+                <!--               <h2>Middle Section</h2> -->
             </div>
 
             <div id="right">
@@ -45,52 +44,37 @@
 
     <div id="container">
 
-      <section id="Portfolio-Page">
-        
+        <section id="Portfolio-Page">
+
 
             <h2>Portfolio</h2>
 
             <div class="image1">
-                <img src="assets/images/images1.jpeg" alt="">
-                <a href="#">
-                    <h4>Hangman</h4>
-                </a>
+                <img src="assets/images/images1.jpeg" alt=""><a href="#"><h4>Hangman</h4></a>
             </div>
 
             <div class="image2">
-                <img src="assets/images/images2.jpeg" alt="">
-                <a href="#">
-                    <h4>RPG Game</h4>
-                </a>
+                <img src="assets/images/images2.jpeg" alt=""><a href="#"><h4>RPG Game</h4></a>
             </div>
 
             <div class="image3">
-                <img src="assets/images/images3.jpeg" alt="">
-                <a href="#">
-                    <h4>Trivia Game</h4>
-                </a>
+                <img src="assets/images/images3.jpeg" alt=""><a href="#"><h4>Trivia Game</h4></a>
             </div>
 
             <div class="image4">
-                <img src="assets/images/images4.jpeg" alt="">
-                <a href="#">
-                    <h4>Rutgers Info Widget</h4>
-                </a>
+                <img src="assets/images/images4.jpeg" alt=""><a href="#"><h4>Rutgers Info Widget</h4></a>
             </div>
 
             <div class="image5">
-                <img src="assets/images/images5.jpeg" alt="">
-                <a href="#">
-                    <h4>Rock Paper Scissors</h4>
-                </a>
+                <img src="assets/images/images5.jpeg" alt=""><a href="#"><h4>Rock Paper Scissors</h4></a>
             </div>
-        
+
 
         </section>
     </div>
 
     <footer>
-        <p>© 2019 Copyright</p>
+        <h5>© 2019 Copyright</h5>
     </footer>
 
 
