--- a/contact.html
+++ b/contact.html
@@ -20,7 +20,7 @@
             </div>
 
             <div id="middle">
-                <!--               <h2>Middle Section (hidden)</h2> -->
+                <!--               <h2>Middle Section</h2> -->
             </div>
 
             <div id="right">
@@ -68,7 +68,7 @@
     </div>
 
     <footer>
-        <p>© 2019 Copyright</p>
+        <h5>© 2019 Copyright</h5>
     </footer>
 
 </body>
